@@ -1,11 +1,14 @@
 package com.bakdata.conquery.apiv1;
 
+import java.net.MalformedURLException;
+import java.net.URISyntaxException;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Consumer;
@@ -49,6 +52,7 @@ import com.bakdata.conquery.models.common.Range;
 import com.bakdata.conquery.models.config.ColumnConfig;
 import com.bakdata.conquery.models.config.ConqueryConfig;
 import com.bakdata.conquery.models.datasets.Dataset;
+import com.bakdata.conquery.models.datasets.PreviewConfig;
 import com.bakdata.conquery.models.datasets.SecondaryIdDescription;
 import com.bakdata.conquery.models.datasets.concepts.Connector;
 import com.bakdata.conquery.models.error.ConqueryError;
@@ -99,7 +103,7 @@ public class QueryProcessor {
 		// This maps works as long as we have query visitors that are not configured in anyway.
 		// So adding a visitor twice would replace the previous one but both would have yielded the same result.
 		// For the future a better data structure might be desired that also regards similar QueryVisitors of different configuration
-		ClassToInstanceMap<QueryVisitor> visitors = MutableClassToInstanceMap.create();
+		final ClassToInstanceMap<QueryVisitor> visitors = MutableClassToInstanceMap.create();
 		query.addVisitors(visitors);
 
 		// Initialize checks that need to traverse the query tree
@@ -187,7 +191,7 @@ public class QueryProcessor {
 			execution = newExecution;
 		}
 
-		ExecutionState state = execution.getState();
+		final ExecutionState state = execution.getState();
 		if (state.equals(ExecutionState.RUNNING)) {
 			log.trace("The Execution[{}] was already started and its state is: {}", execution.getId(), state);
 			return execution;
@@ -203,7 +207,7 @@ public class QueryProcessor {
 
 
 	public Stream<ExecutionStatus> getAllQueries(Dataset dataset, HttpServletRequest req, Subject subject, boolean allProviders) {
-		Collection<ManagedExecution> allQueries = storage.getAllExecutions();
+		final Collection<ManagedExecution> allQueries = storage.getAllExecutions();
 
 		return getQueriesFiltered(dataset, RequestAwareUriBuilder.fromRequest(req), subject, allQueries, allProviders);
 	}
@@ -220,7 +224,7 @@ public class QueryProcessor {
 						 .filter(q -> q.getState().equals(ExecutionState.DONE) || q.getState().equals(ExecutionState.NEW))
 						 .filter(q -> subject.isPermitted(q, Ability.READ))
 						 .map(mq -> {
-							 OverviewExecutionStatus status = mq.buildStatusOverview(uriBuilder.clone(), subject);
+							 final OverviewExecutionStatus status = mq.buildStatusOverview(uriBuilder.clone(), subject);
 							 if (mq.isReadyToDownload()) {
 								 status.setResultUrls(getResultAssets(config.getResultProviders(), mq, uriBuilder, allProviders));
 							 }
@@ -242,9 +246,18 @@ public class QueryProcessor {
 	public static List<ResultAsset> getResultAssets(List<ResultRendererProvider> renderer, ManagedExecution exec, UriBuilder uriBuilder, boolean allProviders) {
 
 		return renderer.stream()
-					   .map(r -> r.generateResultURLs(exec, uriBuilder.clone(), allProviders))
+					   .map(r -> {
+						   try {
+							   return r.generateResultURLs(exec, uriBuilder.clone(), allProviders);
+						   }
+						   catch (MalformedURLException | URISyntaxException e) {
+							   log.error("Cannot generate result urls for execution '{}' with provider '{}'", exec.getId(), r.getClass().getName());
+							   return null;
+						   }
+					   })
+					   .filter(Objects::nonNull)
 					   .flatMap(Collection::stream)
-					   .collect(Collectors.toList());
+					   .toList();
 
 	}
 
@@ -308,11 +321,11 @@ public class QueryProcessor {
 
 		// TODO remove this, since we don't translate anymore
 		// Patch this query in other datasets
-		List<Dataset> remainingDatasets = datasetRegistry.getAllDatasets();
+		final List<Dataset> remainingDatasets = datasetRegistry.getAllDatasets();
 		remainingDatasets.remove(execution.getDataset());
 
 		for (Dataset dataset : remainingDatasets) {
-			ManagedExecutionId id = new ManagedExecutionId(dataset.getId(), execution.getQueryId());
+			final ManagedExecutionId id = new ManagedExecutionId(dataset.getId(), execution.getQueryId());
 			final ManagedExecution otherExecution = storage.getExecution(id);
 			if (otherExecution == null) {
 				continue;
@@ -405,8 +418,8 @@ public class QueryProcessor {
 	public FullExecutionStatus getSingleEntityExport(Subject subject, UriBuilder uriBuilder, String idKind, String entity, List<Connector> sources, Dataset dataset, Range<LocalDate> dateRange) {
 
 		final Namespace namespace = datasetRegistry.get(dataset.getId());
-		EntityPreviewForm form =
-				EntityPreviewForm.create(entity, idKind, dateRange, sources, namespace.getPreviewConfig().getSelects());
+		final PreviewConfig previewConfig = datasetRegistry.get(dataset.getId()).getPreviewConfig();
+		final EntityPreviewForm form = EntityPreviewForm.create(entity, idKind, dateRange, sources, previewConfig.getSelects(), previewConfig.getTimeStratifiedSelects(), datasetRegistry);
 
 		// TODO make sure that subqueries are also system
 		// TODO do not persist system queries
@@ -424,7 +437,7 @@ public class QueryProcessor {
 		}
 
 
-		FullExecutionStatus status = execution.buildStatusFull(subject);
+		final FullExecutionStatus status = execution.buildStatusFull(subject);
 		status.setResultUrls(getResultAssets(config.getResultProviders(), execution, uriBuilder, false));
 		return status;
 	}
